--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -22,9 +22,9 @@
     <add key="storeLocation" value="LocalMachine" />
 
 
-    <add key="MailSubject" value="Endesa - Usted tiene Documentos para Visualizar" />
-    <add key="MailFrom" value="test@test.com" />
-    <add key="MailReplayTo" value="test@test.com" />
+    <add key="MailSubject" value="Facturación Electrónica Endesa Cemsa" />
+    <add key="MailFrom" value="info@endesacemsa.com" />
+    <add key="MailReplayTo" value="info@endesacemsa.com" />
     <add key="MailBodyPathHtml" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\trunk\src\FacturaElectronica.Ws.Host\EmailTemplates\DocumentosPendientes.htm" />
     <add key="MailHost" value="smtp.gmail.com" />
     <add key="MailPort" value="587" />
