--- a/src/FacturaElectronica.Afip.Ws/FacturaElectronica.Afip.Ws.csproj
+++ b/src/FacturaElectronica.Afip.Ws/FacturaElectronica.Afip.Ws.csproj
@@ -48,6 +48,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Service References\Wsfex\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\Wsfe\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -58,8 +63,59 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\Wsaa\LoginCms.wsdl" />
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.DummyResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXGetCMPResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponseAuthorize.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponseLast_CMP.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Cbte_Tipo.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_CheckPermiso.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Ctz.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_DST_cuit.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_DST_pais.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Idi.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Inc.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_LastID.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Mon.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_PtoVenta.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Tex.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\FacturaElectronica.Afip.Ws.Wsfex.FEXResponse_Umed.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Wsfex\service.wsdl" />
     <None Include="Service References\Wsfe\FacturaElectronica.Afip.Ws.Wsfe.CbteTipoResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -118,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\Wsaa\" />
+    <WCFMetadataStorage Include="Service References\Wsfex\" />
     <WCFMetadataStorage Include="Service References\Wsfe\" />
   </ItemGroup>
   <ItemGroup>
@@ -140,6 +197,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\Wsfe\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Wsfex\service.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Wsfex\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Wsfex\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\Wsfex\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
