config para fex

--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -16,6 +16,7 @@
     <add key="storeLocation" value="LocalMachine" />-->
     <add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
     <add key="idServicioNegocio" value="wsfe" />
+    <add key="idServicioNegocioFex" value="wsfex" />
     <add key="certSigner" value="C=AR, O=ENDESA CEMSA S.A., SERIALNUMBER=CUIT 30691607050, CN=ENDESAFEPROD" />
     <add key="cuit" value="30691607050" />
     <add key="storeName" value="TrustedPeople" />
@@ -66,8 +67,8 @@
         <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
           bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
-          messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="1000000"
+          messageEncoding="Text" textEncoding="utf-8" transferMode="Streamed"
           useDefaultWebProxy="true">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
             maxBytesPerRead="4096" maxNameTableCharCount="16384" />
@@ -247,6 +248,9 @@
       <endpoint address="https://servicios1.afip.gov.ar/wsfev1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="Wsfe.ServiceSoap" name="ServiceSoap" />
+      <endpoint address="https://wswhomo.afip.gov.ar/wsfexv1/service.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
+        contract="Wsfex.ServiceSoap" name="ServiceSoap" />
     </client>
 
     <diagnostics>
