--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <configuration>
-  <appSettings>    
+  <appSettings>
     <add key="FTPAddress" value="ftp://localhost/"/>
     <add key="FTPUser" value="Adrian"/>
     <add key="FTPPassword" value="Adr1an"/>
   </appSettings>
- 
+
   <system.serviceModel>
-    <behaviors>    
+    <behaviors>
       <endpointBehaviors>
         <behavior name="bigItemInGraph">
           <dataContractSerializer maxItemsInObjectGraph="500000" />
@@ -119,6 +119,25 @@
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
         contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
+      <!--<endpoint address="http://localhost:1500/MaestroService.svc"
+       behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+       bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
+       name="WSHttpBinding_IMaestrosService" />
+      <endpoint address="http://localhost:1500/AfipWrapperService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService"
+        name="WSHttpBinding_IAfipWrapperService" />
+      <endpoint address="http://localhost:1500/SubidaArchivoService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
+        name="WSHttpBinding_ISubidaArchivoService" />
+      <endpoint address="http://localhost:1500/ComprobanteService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IComprobanteService" contract="ServiceReferenceComprobanteService.IComprobanteService"
+        name="WSHttpBinding_IComprobanteService" />
+      <endpoint address="http://localhost:1500/ProcesoCorridaService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />-->
     </client>
 
     <diagnostics>
@@ -146,4 +165,7 @@
     <trace autoflush="true"/>
   </system.diagnostics>
 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
