--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -8,19 +8,20 @@
 <configuration>
 
   <appSettings>
-    <!--<add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
+    <add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
     <add key="idServicioNegocio" value="wsfe" />
+    <add key="idServicioNegocioFex" value="wsfex" />
     <add key="certSigner" value="C=AR, O=ENDESA, SERIALNUMBER=CUIT 23289508759, CN=TestFE" />
     <add key="cuit" value="23289508759" />
     <add key="storeName" value="TrustedPeople" />
-    <add key="storeLocation" value="LocalMachine" />-->
-    <add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
+    <add key="storeLocation" value="LocalMachine" />
+    <!--<add key="PathDestinoArchivosFactura" value="D:\Programming\Proyectos\Tecnosop\FacturaElectronica\Codigo\Fe\FacturaElectronica\ServerTelefonica\" />
     <add key="idServicioNegocio" value="wsfe" />
     <add key="idServicioNegocioFex" value="wsfex" />
     <add key="certSigner" value="C=AR, O=ENDESA CEMSA S.A., SERIALNUMBER=CUIT 30691607050, CN=ENDESAFEPROD" />
     <add key="cuit" value="30691607050" />
     <add key="storeName" value="TrustedPeople" />
-    <add key="storeLocation" value="LocalMachine" />
+    <add key="storeLocation" value="LocalMachine" />-->
 
 
     <add key="MailSubject" value="Facturación Electrónica Endesa Cemsa" />
@@ -40,6 +41,8 @@
   <connectionStrings>
     <clear/>
     <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+    <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.16.48.24;Initial Catalog=TestBorrame;Persist Security Info=True;User ID=amartinez;Password=am2011#1554;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
+    <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.50.62.25;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
   </connectionStrings>
 
   <system.web>
@@ -235,22 +238,25 @@
       />
       </behaviorExtensions>
     </extensions>
-    <client>
-      <!--<endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
-        binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
-        contract="Wsaa.LoginCMS" name="LoginCms" />
+    <client>     
+      <endpoint address="https://wsaahomo.afip.gov.ar/ws/services/LoginCms"
+      binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
+      contract="Wsaa.LoginCMS" name="LoginCms" />
       <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
-        binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-        contract="Wsfe.ServiceSoap" name="ServiceSoap" />-->
-      <endpoint address="https://wsaa.afip.gov.ar/ws/services/LoginCms"
-       binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
-       contract="Wsaa.LoginCMS" name="LoginCms" />
-      <endpoint address="https://servicios1.afip.gov.ar/wsfev1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="Wsfe.ServiceSoap" name="ServiceSoap" />
       <endpoint address="https://wswhomo.afip.gov.ar/wsfexv1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="Wsfex.ServiceSoap" name="ServiceSoap" />
+      <!--<endpoint address="https://wsaa.afip.gov.ar/ws/services/LoginCms"
+       binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
+       contract="Wsaa.LoginCMS" name="LoginCms" />
+      <endpoint address="https://servicios1.afip.gov.ar/wsfev1/service.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
+        contract="Wsfe.ServiceSoap" name="ServiceSoap" />-->
+      <!--<endpoint address="https://servicios1.afip.gov.ar/wsfexv1/service.asmx"
+        binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
+        contract="Wsfex.ServiceSoap" name="ServiceSoap" />-->
     </client>
 
     <diagnostics>
