--- a/src/FacturaElectronica.Afip.Ws/app.config
+++ b/src/FacturaElectronica.Afip.Ws/app.config
@@ -87,6 +87,34 @@
                         <message clientCredentialType="UserName" algorithmSuite="Default" />
                     </security>
                 </binding>
+                <binding name="ServiceSoap4" closeTimeout="00:01:00" openTimeout="00:01:00"
+                    receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+                    bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+                    useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <security mode="Transport">
+                        <transport clientCredentialType="None" proxyCredentialType="None"
+                            realm="" />
+                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                    </security>
+                </binding>
+                <binding name="ServiceSoap5" closeTimeout="00:01:00" openTimeout="00:01:00"
+                    receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+                    bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+                    useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <security mode="None">
+                        <transport clientCredentialType="None" proxyCredentialType="None"
+                            realm="" />
+                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                    </security>
+                </binding>
             </basicHttpBinding>
         </bindings>
         <client>
@@ -97,7 +125,7 @@
                 binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
                 contract="Wsfe.ServiceSoap" name="ServiceSoap" />
             <endpoint address="https://wswhomo.afip.gov.ar/wsfexv1/service.asmx"
-                binding="basicHttpBinding" bindingConfiguration="ServiceSoap2"
+                binding="basicHttpBinding" bindingConfiguration="ServiceSoap4"
                 contract="Wsfex.ServiceSoap" name="ServiceSoap1" />
         </client>
     </system.serviceModel>
