--- a/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
+++ b/src/FacturaElectronica.Ui.Win.Administrador/FacturaElectronica.Ui.Win.Administrador.csproj
@@ -263,6 +263,24 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService31.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService32.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService33.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService34.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService35.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\ServiceReferenceAfipWrapper\FacturaElectronica.Afip.Ws.Wsfex.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -282,6 +300,7 @@
     <None Include="Service References\ServiceReferenceAfipWrapper\System.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\ServiceReferenceAfipWrapper\WsfeClient1.wsdl" />
     <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService.wsdl" />
     <None Include="Service References\ServiceReferenceComprobanteService\ComprobanteService.xsd">
       <SubType>Designer</SubType>
@@ -358,6 +377,7 @@
     <Content Include="ENDESA-Cemsa-Ejemplo.xml">
       <SubType>Designer</SubType>
     </Content>
+    <None Include="Service References\ServiceReferenceAfipWrapper\AfipWrapperService1.disco" />
     <None Include="Service References\ServiceReferenceCorrida\ProcesoCorridaService1.disco" />
     <None Include="Service References\ServiceReferenceComprobanteService\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
