--- a/src/FacturaElectronica.Ui.Web/Web.config
+++ b/src/FacturaElectronica.Ui.Web/Web.config
@@ -8,6 +8,7 @@
     <clear/>
 		<add name="ApplicationServices" connectionString="data source=.\SQL200;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
 		<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQL2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+    <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.16.48.24;Initial Catalog=borrame;Persist Security Info=True;User ID=amartinez;Password=am2011#1554;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
 	</connectionStrings>  
 	<system.web>    
 		<compilation debug="true" targetFramework="4.0">
