--- a/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
+++ b/src/FacturaElectronica.Common/FacturaElectronica.Common.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Contracts\DetalleComprobanteDto.cs" />
     <Compile Include="Contracts\DetalleErrorDto.cs" />
     <Compile Include="Contracts\DetalleEventoDto.cs" />
+    <Compile Include="Contracts\EjecutarCorridaSubidaArchivo.cs" />
     <Compile Include="Contracts\EmailConfiguration.cs" />
     <Compile Include="Contracts\EmailInThread.cs" />
     <Compile Include="Contracts\EstadoArchivoAsociadoDto.cs" />
