--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -53,21 +53,6 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
-        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
-          openTimeout="00:15:00" receiveTimeout="01:00:00" sendTimeout="01:00:00"
-          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
-          maxBufferPoolSize="6524288" maxReceivedMessageSize="665536"
-          messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true"
-          allowCookies="false">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
-            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
-          <reliableSession ordered="true" inactivityTimeout="00:10:00"
-            enabled="false" />
-          <security mode="TransportWithMessageCredential">
-            <transport clientCredentialType="None" proxyCredentialType="None" />
-            <message clientCredentialType="UserName" algorithmSuite="Default" />
-          </security>
-        </binding>
         <binding name="WSHttpBinding_ISubidaArchivoService" closeTimeout="00:01:00"
           openTimeout="00:01:00" receiveTimeout="01:00:00" sendTimeout="01:00:00"
           bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
@@ -97,17 +82,49 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
+        <binding name="WSHttpBinding_IAfipWrapperService" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+          textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00"
+            enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="UserName" negotiateServiceCredential="true"
+              algorithmSuite="Default" />
+          </security>
+        </binding>
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
+      
+      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/MaestroService.svc"
+      behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+      bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
+      name="WSHttpBinding_IMaestrosService" />
+      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/SubidaArchivoService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
+        name="WSHttpBinding_ISubidaArchivoService" />
+      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/ComprobanteService.svc"
+        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
+        bindingConfiguration="WSHttpBinding_IComprobanteService" contract="ServiceReferenceComprobanteService.IComprobanteService"
+        name="WSHttpBinding_IComprobanteService" />
+      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
+        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
+      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/AfipWrapperService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
+        contract="ServiceReferenceAfipWrapperService.IAfipWrapperService"
+        name="WSHttpBinding_IAfipWrapperService" />
+      <!--<endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
         name="WSHttpBinding_IMaestrosService" />
-      <endpoint address="https://endesafews/FacturaElectronicaWsHost/AfipWrapperService.svc"
-        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService"
-        name="WSHttpBinding_IAfipWrapperService" />
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/SubidaArchivoService.svc"
         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
@@ -119,25 +136,10 @@
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/ProcesoCorridaService.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
         contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />
-      <!--<endpoint address="http://localhost:1500/MaestroService.svc"
-       behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-       bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
-       name="WSHttpBinding_IMaestrosService" />
-      <endpoint address="http://localhost:1500/AfipWrapperService.svc"
-        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_IAfipWrapperService" contract="ServiceReferenceAfipWrapper.IAfipWrapperService"
-        name="WSHttpBinding_IAfipWrapperService" />
-      <endpoint address="http://localhost:1500/SubidaArchivoService.svc"
-        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_ISubidaArchivoService" contract="ServiceReferenceSubidaArchivo.ISubidaArchivoService"
-        name="WSHttpBinding_ISubidaArchivoService" />
-      <endpoint address="http://localhost:1500/ComprobanteService.svc"
-        behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
-        bindingConfiguration="WSHttpBinding_IComprobanteService" contract="ServiceReferenceComprobanteService.IComprobanteService"
-        name="WSHttpBinding_IComprobanteService" />
-      <endpoint address="http://localhost:1500/ProcesoCorridaService.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IProcesoCorridaService"
-        contract="ServiceReferenceCorrida.IProcesoCorridaService" name="WSHttpBinding_IProcesoCorridaService" />-->
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/AfipWrapperService.svc"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
+        contract="ServiceReferenceAfipWrapperService.IAfipWrapperService"
+        name="WSHttpBinding_IAfipWrapperService" />-->
     </client>
 
     <diagnostics>
