--- a/src/FacturaElectronica.Ws.Host/Web.config
+++ b/src/FacturaElectronica.Ws.Host/Web.config
@@ -40,8 +40,8 @@
 
   <connectionStrings>
     <clear/>
-    <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
-    <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.16.48.24;Initial Catalog=borrame;Persist Security Info=True;User ID=amartinez;Password=am2011#1554;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
+    <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\sql2008;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
+    <add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=172.16.48.24;Initial Catalog=Test;Persist Security Info=True;User ID=amartinez;Password=am2011#1554;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
     <!--<add name="FacturaElectronicaEntities" connectionString="metadata=res://*/FacturaElectronica.Model.csdl|res://*/FacturaElectronica.Model.ssdl|res://*/FacturaElectronica.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.50.62.25;Initial Catalog=FacturaElectronica;Persist Security Info=True;User ID=factura;Password=factura;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>-->
   </connectionStrings>
 
@@ -67,6 +67,20 @@
             <message clientCredentialType="UserName" algorithmSuite="Default" />
           </security>
         </binding>
+        <!--<binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:02:00"
+                    receiveTimeout="00:10:00" sendTimeout="00:05:00" allowCookies="false"
+                    bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferSize="665536" maxBufferPoolSize="524288" maxReceivedMessageSize="665536"
+                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+                    useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+              maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="None">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+                realm="" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>-->
         <binding name="ServiceSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
           receiveTimeout="01:00:00" sendTimeout="01:00:00" allowCookies="false"
           bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
@@ -245,9 +259,9 @@
       <endpoint address="https://wswhomo.afip.gov.ar/wsfev1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
         contract="Wsfe.ServiceSoap" name="ServiceSoap" />
-      <endpoint address="https://wswhomo.afip.gov.ar/wsfexv1/service.asmx"
+      <!--<endpoint address="https://wswhomo.afip.gov.ar/wsfexv1/service.asmx"
         binding="basicHttpBinding" bindingConfiguration="ServiceSoap"
-        contract="Wsfex.ServiceSoap" name="ServiceSoap" />
+        contract="Wsfex.ServiceSoap" name="ServiceSoap" />-->
       <!--<endpoint address="https://wsaa.afip.gov.ar/ws/services/LoginCms"
        binding="basicHttpBinding" bindingConfiguration="LoginCmsSoapBinding"
        contract="Wsaa.LoginCMS" name="LoginCms" />
