--- a/src/FacturaElectronica.Ui.Win.Administrador/App.config
+++ b/src/FacturaElectronica.Ui.Win.Administrador/App.config
@@ -102,7 +102,7 @@
     </bindings>
     <client>
       
-      <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/MaestroService.svc"
+      <!--<endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/MaestroService.svc"
       behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
       bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
       name="WSHttpBinding_IMaestrosService" />
@@ -120,8 +120,8 @@
       <endpoint address="https://10.242.48.12/FacturaElectronicaWsHost/AfipWrapperService.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
         contract="ServiceReferenceAfipWrapperService.IAfipWrapperService"
-        name="WSHttpBinding_IAfipWrapperService" />
-      <!--<endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
+        name="WSHttpBinding_IAfipWrapperService" />-->
+      <endpoint address="https://endesafews/FacturaElectronicaWsHost/MaestroService.svc"
         behaviorConfiguration="bigItemInGraph" binding="wsHttpBinding"
         bindingConfiguration="WSHttpBinding_IMaestrosService" contract="ServiceReferenceMaestro.IMaestrosService"
         name="WSHttpBinding_IMaestrosService" />
@@ -139,7 +139,7 @@
       <endpoint address="https://endesafews/FacturaElectronicaWsHost/AfipWrapperService.svc"
         binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAfipWrapperService"
         contract="ServiceReferenceAfipWrapperService.IAfipWrapperService"
-        name="WSHttpBinding_IAfipWrapperService" />-->
+        name="WSHttpBinding_IAfipWrapperService" />
     </client>
 
     <diagnostics>
